gap fix

--- a/src/components/featured/featured.scss
+++ b/src/components/featured/featured.scss
@@ -10,66 +10,68 @@
     justify-content: space-between;
     color: gray;
 
-    .title{
+    .title {
+      font-size: 16px;
       font-weight: 500;
     }
   }
 
-  .bottom{
+  .bottom {
     padding: 20px;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    gap: 14px;
-  }
+    gap: 35px;
 
-  .featuredChart{
-    width: 100px;
-    height: 100px;
-  }
+    .featuredChart {
+      width: 100px;
+      height: 100px;
+    }
 
-  .title{
-    font-weight: 500;
-    color: gray;
-  }
+    .title {
+      font-weight: 500;
+      color: gray;
+    }
 
-  .amount{
-    font-size: 30px;
-  }
+    .amount {
+      font-size: 30px;
+    }
 
-  .desc{
-    font-weight: 300;
-    font-size: 12px;
-    color: gray;
-    text-align: center;
-  }
-
-  .summary{
-    width: 100%; 
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-
-    .item{
+    .desc {
+      font-weight: 300;
+      font-size: 12px;
+      color: gray;
       text-align: center;
+    }
 
-      .itemTitle{
-        font-size: 14px;
-        color: gray;
-      }
+    .summary {
+      width: 100%;
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
 
-      .itemResult{
-        display: flex;
-        align-items: center;
-        margin-top: 10px;
-        font-size: 14px;
+      .item {
+        text-align: center;
 
-        &.positive{
-          color: green
+        .itemTitle {
+          font-size: 14px;
+          color: gray;
         }
-        &.negative{
-          color: red
+
+        .itemResult {
+          display: flex;
+          align-items: center;
+          margin-top: 10px;
+          font-size: 14px;
+
+          &.positive {
+            color: green;
+          }
+
+          &.negative {
+            color: red;
+          }
         }
       }
     }
